# stepview

./: Makefile  README.md  pyproject.toml
.github/workflows/: python.yml
stepview/: __init__.py  data.py  entrypoint.py  tui.py
stepview_tests/: test_stepview.py
stepview_tests/resources/: credentials  sfn_definition.json
