[tool.poetry]
name = "stepview"
version = "0.1.0"
description = "1 global view of all your stepfunctions statemachines"
authors = ["vincent <vclaes1986@gmail.com>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.0.1"
textual = "^0.1.17"
dacite = "^1.6.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
moto = "^3.1.3"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
