[tool.poetry]
name = "stepview"
version = "0.4.2"
description = "1 global view of all your stepfunctions statemachines"
authors = ["vincent <vclaes1986@gmail.com>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.0.1"
textual = "^0.1.17"
typer = "^0.4.1"
pendulum = "^2.1.2"
boto3 = "^1.21.42"

[tool.poetry.dev-dependencies]
moto = "^3.1.3"
pre-commit = "^2.18.1"
black = "^22.3.0"
pytest = "^7.1.1"
ipykernel = "^6.13.0"
freezegun = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stepview = 'stepview.entrypoint:run'
